--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,4 +1,4 @@
-/* * { */
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box; }
@@ -12,7 +12,7 @@ body {
   width: 800px;
   margin: 0 auto;
   padding: 20px;
-  background: lightgrey url("../img/bg.png");
+  background: url("../img/bg.png");
   text-align: center; }
 
 .input-part {
