--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -12,7 +12,7 @@ body{
   width: 800px;
   margin: 0 auto;
   padding: 20px;
-  background: lightgrey url("../img/bg.png");
+  background: url("../img/bg.png");
   text-align: center;
 }
 .input-part{
