--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -15,7 +15,6 @@ $main-font-color: 	#800517;
 }
 body{
   font-family:"Comfortaa", sans-serif;
-
   color: $main-font-color;
   background: url("../img/bg-light.png");
 }
@@ -23,14 +22,14 @@ body{
   width: 900px;
   margin: 0 auto;
   padding: 20px;
-
+  position: relative;
   text-align: center;
 }
 .input-part{
-  text-align: left;
+  text-align: center;
   font-family:"Ubuntu", sans-serif;
   padding: 50px;
-  border-bottom:1px ;
+  border-bottom:1px solid $main-font-color;
   &::after{
     content: '';
     clear: both;
@@ -45,7 +44,6 @@ body{
 .input-part__product-price{
   float: right;  
   margin-right: 75px;
-  text-align: center;
 
 }
 input{
@@ -57,8 +55,9 @@ input[type='number']{
   text-align: right;
 }
 .button{
-  margin-right: 200px;
-  margin: auto;
+  float: left;
+  margin-top: 100px;
+  margin-left: 50px;
   display: block;
   width: 100px;
   min-height: 30px;
@@ -75,24 +74,14 @@ button:hover{
   box-shadow: 0 0 10px 1px black;
 }
 
-.product-output{
 
-  margin-top: 50px;
-}
-.product-output__name{
-  display: inline-block;
-  margin-right: 20px;
-}
-.product-output__price{
-  display: inline-block;
-}
-.product-output__name-item {
-  border-bottom:1px solid $main-font-color;
-}
-.product-output__price-item{
-  border-bottom:1px solid $main-font-color;
-}
 table{
   margin:50px auto;
   width: 600px;
+}
+
+.total{
+  position: absolute;
+  top:250px;
+  right: 150px;
 }
